Styling cleanup to fix weird shifting of elements during drag

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -4,9 +4,18 @@
      not just for styling. sq_drag_drop_sortable_list_component assumes these
      are relatively positioned in order to do its animations */
   position: relative;
+  box-sizing: border-box;
+}
+
+.drag-drop__drag-content {
+  overflow: hidden;
 }
 
 .drag-drop__drop-area {
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   display: none;
@@ -24,16 +33,17 @@
   display: block;
 }
 
+.drag-drop__drag-content--ghost {
+  box-sizing: border-box;
+}
+
 /* move the thing we're dragging lower than the others while it is animating */
-/* TODO(kapil) don't hardcode these z-indices. Either these should be suggested CSS, or a parameter */
 .drag-drop--during-animation {
   z-index: 2;
 }
-
 .drag-drop--during-animation.drag-drop--animating {
   z-index: 3;
 }
-
 .drag-drop--during-animation.drag-drop--animating.drag-drop--dragging {
   z-index: 1;
 }
@@ -41,20 +51,35 @@
 /***** APPLICATION CSS ******/
 .draggable,
 .tile {
-  width: 48px;
-  height: 40px;
+  width: 68px;
+  height: 56px;
 }
 
 .draggable {
+  display: inline-block;
+  outline: solid 1px gray;
   margin: 8px;
-}
-
-.tile {
-  border: solid 1px gray;
-  font-size: 12pt;
+  padding: 8px;
 }
 
 .draggable .drag-drop__drop-area {
   background: white;
-  border: dashed 1px gray;
+  outline: dashed 1px gray;
+}
+
+.draggable.drag-drop--hovered {
+  outline-width: 2px;
+}
+
+.draggable.drag-drop--dragging {
+  outline: none;
+}
+
+.draggable .drag-drop__drag-content--ghost {
+  outline: none;
+  border: solid 2px gray;
+}
+
+.tile {
+  font-size: 12pt;
 }
